# workspyce

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml  lint.yaml  test.yaml
.workspyce/: test-file.md
src/: check.rs  main.rs  release.rs  version.rs
testfiles/: notapyproject.toml
testfiles/proj/: pyproject.toml
