[package]
name = "workspyce"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/AstraBert/workspyce"
description = "A minimal, no-nonsense version manager for uv workspaces, inspired by changesets"
keywords = ["uv", "python", "versioning", "semver", "version-manager", "workspace"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
random-name = "0.1.1"
regex = "1.12.2"